Make lookup-based class definition reusable
The lookup overload reused retained compiler output, eagerly initialised generated classes, and still initialised legacy Unsafe helpers. It could also define a primary class before a same-source superclass.

Scope output to each compilation, cache and serialise definitions by loader and binary name, retry unresolved batch dependencies, preserve non-initialising lookup semantics, and load the legacy definer lazily.

This prevents duplicate definitions and ordering failures while providing a genuinely Unsafe-independent Java 9+ path. Refs #91.