@@ -6,7 +6,6 @@ package net.openhft.compiler;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.Unsafe;
 
 import javax.tools.*;
 import javax.tools.JavaFileObject.Kind;
@@ -14,8 +13,6 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.lang.reflect.AccessibleObject;
-import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.URI;
@@ -31,32 +28,11 @@ import java.util.concurrent.TimeoutException;
  */
 public class MyJavaFileManager implements JavaFileManager {
     private static final Logger LOG = LoggerFactory.getLogger(MyJavaFileManager.class);
-    private final static Unsafe unsafe;
-    private static final long OVERRIDE_OFFSET;
-
-    // Unsafe sets AccessibleObject.override for speed and JDK-9+ compatibility
-    static {
-        long offset;
-        try {
-            Field theUnsafe = Unsafe.class.getDeclaredField("theUnsafe");
-            theUnsafe.setAccessible(true);
-            unsafe = (Unsafe) theUnsafe.get(null);
-        } catch (Exception ex) {
-            throw new AssertionError(ex);
-        }
-        try {
-            Field f = AccessibleObject.class.getDeclaredField("override");
-            offset = unsafe.objectFieldOffset(f);
-        } catch (NoSuchFieldException e) {
-            offset = 0;
-        }
-        OVERRIDE_OFFSET = offset;
-    }
-
     private final StandardJavaFileManager fileManager;
 
     // synchronizing due to ConcurrentModificationException
     private final Map<String, CloseableByteArrayOutputStream> buffers = Collections.synchronizedMap(new LinkedHashMap<>());
+    private final Map<URI, Set<String>> outputsBySource = new HashMap<>();
 
     /**
      * Create a file manager that delegates to the provided instance while
@@ -153,9 +129,19 @@ public class MyJavaFileManager implements JavaFileManager {
                 // CloseableByteArrayOutputStream.closed is used to filter partial results from getAllBuffers()
                 CloseableByteArrayOutputStream baos = new CloseableByteArrayOutputStream();
 
-                // Reads from getAllBuffers() should be repeatable:
-                // ignore compile result in case compilation of this class was triggered before
-                buffers.putIfAbsent(className, baos);
+                // Compiler tasks are serialised by CachedCompiler, so replacing a previous
+                // result makes repeat compilation return the bytes produced by this task.
+                buffers.put(className, baos);
+                if (sibling != null) {
+                    synchronized (outputsBySource) {
+                        Set<String> outputs = outputsBySource.get(sibling.toUri());
+                        if (outputs == null) {
+                            outputs = new LinkedHashSet<>();
+                            outputsBySource.put(sibling.toUri(), outputs);
+                        }
+                        outputs.add(className);
+                    }
+                }
 
                 return baos;
             }
@@ -187,6 +173,31 @@ public class MyJavaFileManager implements JavaFileManager {
      */
     public void clearBuffers() {
         buffers.clear();
+        synchronized (outputsBySource) {
+            outputsBySource.clear();
+        }
+    }
+
+    void prepareForCompilation(Iterable<? extends JavaFileObject> sources) {
+        synchronized (outputsBySource) {
+            for (JavaFileObject source : sources)
+                outputsBySource.remove(source.toUri());
+        }
+    }
+
+    @NotNull
+    Map<String, byte[]> getBuffersForSources(Iterable<? extends JavaFileObject> sources) {
+        final Set<String> outputNames = new LinkedHashSet<>();
+        synchronized (outputsBySource) {
+            for (JavaFileObject source : sources) {
+                Set<String> outputs = outputsBySource.get(source.toUri());
+                if (outputs != null)
+                    outputNames.addAll(outputs);
+            }
+        }
+        final Map<String, byte[]> result = getAllBuffers();
+        result.keySet().retainAll(outputNames);
+        return result;
     }
 
     /**
@@ -229,37 +240,27 @@ public class MyJavaFileManager implements JavaFileManager {
     }
 
     /**
-     * Invoke a method by name on the delegate if it exists, using {@link Unsafe}
-     * to bypass accessibility checks when required.
+     * Invoke a public Java file-manager method by name when running on a JDK that exposes it.
      */
     @SuppressWarnings("unchecked")
     private <T> T invokeNamedMethodIfAvailable(final Location location, final String name, final T defaultValue) {
-        final Method[] methods = fileManager.getClass().getDeclaredMethods();
-        for (Method method : methods) {
-            if (method.getName().equals(name) && method.getParameterTypes().length == 1 &&
-                    method.getParameterTypes()[0] == Location.class) {
-                try {
-                    if (OVERRIDE_OFFSET == 0)
-                        method.setAccessible(true);
-                    else
-                        unsafe.putBoolean(method, OVERRIDE_OFFSET, true);
-                    return (T) method.invoke(fileManager, location);
-                } catch (IllegalAccessException | InvocationTargetException e) {
-                    throw new UnsupportedOperationException("Unable to invoke method " + name, e);
-                } catch (RuntimeException e) {
-                    // On strongly-encapsulated JDKs (JEP 403, JDK 17+) making the internal
-                    // delegate method accessible can throw InaccessibleObjectException when the
-                    // Unsafe override path is unavailable (e.g. a future JDK that removes it).
-                    // Degrade gracefully instead of failing the whole compilation: single-class
-                    // compilation against the application class path does not need module-location
-                    // resolution, so returning the neutral default keeps the library working
-                    // without requiring --add-opens jdk.compiler/... flags. See issue #91.
-                    LOG.debug("Falling back to default for {} (delegate {} not accessible): {}",
-                            name, fileManager.getClass().getName(), e.toString());
-                    return defaultValue;
-                }
-            }
+        final Method method;
+        try {
+            method = JavaFileManager.class.getMethod(name, Location.class);
+        } catch (NoSuchMethodException e) {
+            return defaultValue;
         }
-        return defaultValue;
+        try {
+            return (T) method.invoke(fileManager, location);
+        } catch (IllegalAccessException e) {
+            throw new UnsupportedOperationException("Unable to access method " + name, e);
+        } catch (InvocationTargetException e) {
+            final Throwable cause = e.getCause();
+            if (cause instanceof RuntimeException)
+                throw (RuntimeException) cause;
+            if (cause instanceof Error)
+                throw (Error) cause;
+            throw new UnsupportedOperationException("Unable to invoke method " + name, cause);
+        }
     }
 }
